<resources>
    <string name="app_name" translatable="false">Schedule Time</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="version" translatable="false">1.0.2</string>
    <string name="start" translatable="false">Start</string>
    <string name="suivant">Next</string>
    <string name="back">Back</string>
    <string name="facebook_app_id" translatable="false">1048515559153850</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1048515559153850</string>
    <string name="facebook_client_token" translatable="false">ab6559f443b73cb9c3fc982d13c7bd27</string>
    <string name="FbUserID" translatable="false">100079942789167</string>
    <string name="lien_instagram" translatable="false">https://www.instagram.com/idir7_/</string>
    <string name="lien_facebook" translatable="false">https://www.facebook.com/idir.belmokhtar/</string>
    <string name="lien_whatsapp" translatable="false">+213 659 23 92 69</string>
    <string name="gmail" translatable="false">belmokhtaridir@gmail.com</string>
    <string name="search_hint">Search Here …</string>
    <string name="dev_phone" translatable="false">+213 556 10 94 46</string>
    <string name="dev_location" translatable="false">36.71631, 3.82707</string>
    <string name="notification_channel_id" translatable="false">my canal id</string>
    <string name="notification_channel_title" translatable="false">my cannal title</string>
    <string name="notification_channel_description" translatable="false">ma cannal description</string>
    <string name="idir_belmokhtar" translatable="false">IDIR Belmokhtar</string>
    <string name="my_adresse">Boumerdes, Algeria</string>
    <string name="social_media">Social Media</string>
    <string name="contact_us">Contact Us</string>
    <string name="my_full_adresse">Naciria, Boumerdes, Algeria</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="edit_task">Edit Task</string>
    <string name="priority">Priority</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string-array name="reminder">
        <item>Never</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>5 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>5 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>3 weeks</item>
        <item>4 weeks</item>
    </string-array>
    <string name="save_change">Save Change</string>
    <string name="skip">Skip</string>
    <string name="help_amp_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="notes">Notes</string>
    <string name="note">Note</string>
    <string name="add_new_note">Add new note.</string>
    <string name="create_task_successful">Task created successfully</string>
    <string name="my_profile">My Profile</string>
    <string name="full_name">Full Name</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="all">All</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="clair">Clair</string>
    <string name="rate_schedule_app">Rate Schedule-App</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="ui_ux_design">Ui/Ux Design</string>
    <string name="about_us">About us</string>
    <string name="developer_owner">Developer/Owner</string>
    <string name="share">Share</string>
    <string name="share_schedule_app_with_friends">Share Schedule App with friends</string>
    <string name="select_other_category">Select other category :</string>
    <string name="delete_lorem">Delete Lorem ?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="duplicate">Duplicate</string>
    <string name="details">Details</string>
    <string name="default_">Default</string>
    <string name="never" translatable="false">Never</string>
    <string name="tags">Tags</string>
    <string name="deadline">Deadline</string>
    <string name="next">Next</string>
    <string name="days_repeat">Days repeat</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string-array name="repeat">
        <item>One time</item>
        <item>Everyday</item>
        <item>Select days</item>
    </string-array>
    <string name="save">Save</string>
    <string name="track_your_notes_and_reflect_on_your_day">Track your notes and reflect on your day.</string>
    <string name="get_an_overview_of_how_you_are_performing_to_motivate_yourself_more">Get an overview of how you are performing to motivate yourself more.</string>
    <string name="no_data_found">No data found</string>
    <string name="sort_by">Sort by</string>
    <string name="due_date_and_time">Due Date and Time</string>
    <string name="tasks_done">Tasks Done</string>
    <string name="today">Today</string>
    <string name="tasks">Tasks</string>
    <string name="add_new_task_here">Add new task here.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_your_password">Forgot Your Password!</string>
    <string name="enter_your_email_to_receive_the_password_reset_link">Enter your email to receive the password reset link.</string>
    <string name="continue_">Continue</string>
    <string name="or">Or</string>
    <string name="sign_in_to_your_account">Sign In to your account</string>
    <string name="sort_by_time">Sort by : Time</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="remember">Remember</string>
    <string name="or_login_with">Or Login with</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="please_wait">Please wait…</string>
    <string name="delete_this_note">Delete this note ?</string>
    <string name="delete_this_notes">Delete this notes ?</string>
    <string name="error_in_time">Error in time</string>
    <string name="delete_this_task">Delete this task"</string>
    <string name="email_required">Email Required</string>
    <string name="we_have_sent_you_a_recovery_email">We have sent you a recovery email</string>
    <string name="success_">Success !</string>
    <string name="password_required">Password Required</string>
    <string name="there_is_an_error">there is an error </string>
    <string name="failed">Failed</string>
    <string name="name_required">Name Required</string>
    <string name="password_must_be_more_then_six_caractaire">Password must contain more than 6 characters</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="this_category_exist">This category exist!</string>
    <string name="delete_this_category">Delete this category</string>
    <string name="title_is_empty">Title is empty!</string>
    <string name="description_is_empty">Description is empty!</string>
    <string name="select_at_most_five_categories">Select at most 5 categories</string>
    <string name="_year_left">\ year left</string>
    <string name="_year_">\ year\ </string>
    <string name="_month_left">\ month left</string>
    <string name="_d_left">\ d left</string>
    <string name="_month_">\ month\ </string>
    <string name="_d_">\ d\ </string>
    <string name="_h_left">\ h left</string>
    <string name="_h_">\ h\ </string>
    <string name="_min_left">\ min left</string>
    <string name="_min_">\ min\ </string>
    <string name="_sec_left">\ sec left</string>
    <string name="now">Now</string>
    <string name="time_is_less_than_now">Time is less than now!</string>
    <string name="today_tasks">Today tasks</string>
    <string name="sort_by_priority">Sort by : Priority</string>
    <string name="sort_by_category">Sort by : Category</string>
    <string name="sort_by_tasks_done">Sort by : Tasks done</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This week</string>
    <string name="after_a_week">After a week</string>
    <string name="after_two_weeks">After 2 weeks</string>
    <string name="after_three_weeks">After 3 weeks</string>
    <string name="after_four_weeks">After 4 weeks</string>
    <string name="past_">Past\ </string>
    <string name="_days">\ days</string>
    <string name="past_week">Past week</string>
    <string name="before_two_weeks">Before 2 weeks</string>
    <string name="before_three_weeks">Before 3 weeks</string>
    <string name="before_four_weeks">Before 4 weeks</string>
    <string name="next_month">Next month</string>
    <string name="next_">Next\ </string>
    <string name="_months">\ months</string>
    <string name="last_month">Last month</string>
    <string name="last_">Last\ </string>
    <string name="next_year">Next year</string>
    <string name="_years">\ years</string>
    <string name="last_year">Last year</string>
    <string name="task">Task</string>
    <string name="remove_from_tasks_done">remove from Tasks done.</string>
    <string name="added_to_tasks_done_with_successfully">added to Tasks done with Successfully.</string>
    <string name="not_done">Not done</string>
    <string name="done">Done</string>
    <string name="update">Update</string>
    <string name="change_saved">Change saved</string>
    <string name="remove">Remove</string>
    <string name="remove_this_category_from_task">Remove this category from task</string>
    <string name="this_date_not_accepted">This date not accepted!</string>
    <string name="there_is_no_day_selected">There is no day selected!</string>
    <string name="saved">Save!</string>
    <string name="review_failed_to_start">Review failed to start</string>
    <string name="lang_english">English</string>
    <string name="lang_arabic">Arabic</string>
    <string name="lang_french">Franch</string>
    <string name="system_default">System Default</string>
</resources>