<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="6dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:cardCornerRadius="9dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            style="@style/Theme.AppCompat.custom_background">

            <LinearLayout
                android:id="@+id/dialog_lang_system_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                style="@style/Theme.ScheduleTime.LinearLayout.ListItem.CircleClickable2">

                <TextView
                    android:id="@+id/dialog_lang_system_default_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_default"
                    style="@style/Theme.AppCompat.Textview"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="9dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/Theme.AppCompat.custom_background">

            <LinearLayout
                android:id="@+id/dialog_lang_arabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                style="@style/Theme.ScheduleTime.LinearLayout.ListItem.CircleClickable2">

                <TextView
                    android:id="@+id/dialog_lang_arabic_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lang_arabic"
                    style="@style/Theme.AppCompat.Textview"
                    android:textSize="18sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:paddingVertical="4dp"
                android:layout_marginHorizontal="8dp"
                style="@style/Theme.AppCompat.View"/>

            <LinearLayout
                android:id="@+id/dialog_lang_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                style="@style/Theme.ScheduleTime.LinearLayout.ListItem.CircleClickable2">

                <TextView
                    android:id="@+id/dialog_lang_english_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lang_english"
                    style="@style/Theme.AppCompat.Textview"
                    android:textSize="18sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:paddingVertical="4dp"
                android:layout_marginHorizontal="8dp"
                style="@style/Theme.AppCompat.View"/>

            <LinearLayout
                android:id="@+id/dialog_lang_french"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                style="@style/Theme.ScheduleTime.LinearLayout.ListItem.CircleClickable2">

                <TextView
                    android:id="@+id/dialog_lang_french_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lang_french"
                    style="@style/Theme.AppCompat.Textview"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>